fixed twitter card img alignment

--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ h2 {
 
 .tweeter-card-img {
     
-    width: 97%;
+    width: 90%;
     max-width: 125px;
     height: auto;
     border-radius: 10px;
